@@ -1,0 +1,13 @@
+nclones.list <-
+function(x, ...)
+{
+    if (!is.null(attr(x, "n.clones"))) {
+        return(attr(x, "n.clones"))
+    } else {
+        nc <- unique(unlist(lapply(x, nclones.default)))
+        if (length(nc) > 1)
+            warning("more than one value found")
+        return(nc)
+    }
+}
+
