@@ -2,6 +2,14 @@ dclone package versions
 
 Version 0.1-3, May 28, 2009
 
+    * nclones.list: returns values for
+      objects in a list (for data arg of
+      jags.fit).
+    * changes in jags.fit to incorporate
+      more rjags features (e.g. progress.bar)
+    * nclones is now defined as method along
+      with a default method.
+
 Version 0.1-2, April 30, 2009
 
     * print.glmexplorer: new function.
